@startuml

class Bar{
    - id : Long
    - nombre : String
    - telefono : String
    - web : String
    - horario : String
}

class Usuario{
    - id : Long
    - nombre : String
    - password : String
    - correo : String
    - telefono : String
}

class Reserva{
    - id : Long
    - usuario : Usuario
    - bar : Bar
    - comensales : int
    - fecha : String
    - hora : Stgring
}

Usuario "1" --> "0..*" Reserva : Realiza

Reserva "0..*" o-- "1" Bar : Tiene

@enduml